--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "imersao-manager-erp",
   "private": true,
@@ -11,6 +10,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "react": "^19.0.0",
